--- a/css/style.css
+++ b/css/style.css
@@ -889,7 +889,7 @@ nav .container {
     padding: 10px !important ;
     font-size: 14px !important;
   }
-  .visitor-counter img {
+  .visitor-counter {
     display: none !important;
   }
 }
