--- a/css/timeline.css
+++ b/css/timeline.css
@@ -56,6 +56,7 @@
 .timeline-row .timeline-time small {
   display: block;
   font-size: 0.8rem;
+  border: 2px solid red;
 }
 .timeline-content img {
   width: 100% !important;
@@ -101,12 +102,13 @@
   white-space: nowrap;
   text-overflow: ellipsis;
   line-height: 150%;
+  font-size: 10px !important;
 }
 .timeline-row p {
   font-weight: 600;
   margin-bottom: 30px;
 
-  font-size: 15px !important;
+  font-size: 13px !important;
 }
 
 .timeline-row:nth-child(even) .timeline-content {
