--- a/css/style.css
+++ b/css/style.css
@@ -720,6 +720,9 @@ nav .container {
   .home .box {
     margin: 30px auto !important;
   }
+  .tech-stack-container {
+    display: none !important;
+  }
 }
 
 @media screen and (max-width: 700px) {
